find changed files from main

--- a/vscode_config/settings.json
+++ b/vscode_config/settings.json
@@ -282,10 +282,10 @@
                     "type": "bindings",
                     "bindings": [
                         {
-                            "key": "s",
-                            "name": "status",
+                            "key": "d",
+                            "name": "diff",
                             "type": "command",
-                            "command": "gitlens.gitCommands.status"
+                            "command": "gitlens.openChangedFiles"
                         },
                         {
                             "key": "b",
