--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,1 @@
-# Use unix line endings
-* text eol=lf
-
-# Denote all files that are truly binary and should not be modified.
-*.png binary
-*.jpg binary
+* text=auto
