--- a/vscode_config/settings.json
+++ b/vscode_config/settings.json
@@ -101,7 +101,7 @@
         },
         {
             "key": "u",
-            "name": "undotree_toggle",
+            "name": "undotree",
             "type": "command",
             "command": "timeline.toggleExcludeSource:timeline.localHistory"
         },
